# catsh-old

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Pipfile  README.md  catsh.spec  go.mod  pysh.spec  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
compiler/: main.py
core/: main.py
core/commands/: Clean.py  Close.py  Env.py  Exec.py  Print.py
core/utils/: Error.py  Warning.py
src/: config.rs  main.py  main.rs
src/commands/: Exec.py  clean.rs  close.py  close.rs  exec.rs  mod.rs
src/utils/: alerts.rs  error.py
tools/: publish.catsh  publish.sh
