[package]
name = "catsh"
version = "0.1.0"
description = "A multiplatform, fast, and powerful cat shell"
authors = ["JheysonDev <JheysonDev@outlook.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/JheysonDev/catsh"
license = "GPL-3.0"
keyboards = ["shell","terminal","windows","linux","darwin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.0.0"
colored = "2.0.0"
dirs = "3.0.1"